--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,23 +2,27 @@
 # =====================================================
 
 # Identificação do projeto 
-sonar.projectKey=gerenciador-tarefas
-sonar.projectName=Gerenciador de Tarefas
-sonar.projectVersion=1.0
+sonar.projectKey=gerenciador-tarefas-backend
+sonar.projectName=Gerenciador de Tarefas - Backend
+sonar.projectVersion=1.0.0
+
+# Configurações de autenticação (ajuste conforme necessário)
+sonar.host.url=http://201.23.3.86:9000
+sonar.login=admin
+sonar.password=admin
 
 # Configurações de fonte
 sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 # EXCLUSÕES AGRESSIVAS para reduzir carga de processamento
-sonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/*.txt,**/*.json,**/.git/**,**/dist/**,**/build/**,**/coverage/**,**/*.min.js,**/vendor/**,**/*.bundle.js,**/test/**,**/tests/**,**/*.test.js,**/*.spec.js,**/mock/**,**/mocks/**
+sonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/*.txt,**/.git/**,**/dist/**,**/build/**,**/coverage/**,**/*.min.js,**/vendor/**,**/*.bundle.js,**/test/**,**/tests/**,**/*.test.js,**/*.spec.js,**/mock/**,**/mocks/**,**/package*.json,**/.*
 
-# Incluir APENAS arquivos essenciais
-sonar.inclusions=**/*.js,**/*.html,**/*.css
+# Incluir APENAS arquivos essenciais (Node.js backend)
+sonar.inclusions=**/*.js
 
 # Configurações de performance
 sonar.qualitygate.wait=false
-
 sonar.ws.timeout=120
 sonar.verbose=false
 sonar.log.level=WARN
@@ -55,16 +59,14 @@ sonar.issue.ignore.multicriteria.e8.ruleKey=javascript:S1116
 sonar.issue.ignore.multicriteria.e8.resourceKey=**/*.js
 
 # Configurações para reduzir falsos positivos (economia de processamento)
-sonar.javascript.globals=window,document,console,require,module,exports,process,global,Buffer,__dirname,__filename
-
-# DESABILITAR análises desnecessárias para projetos pequenos
-sonar.analysis.mode=preview
-sonar.dynamicAnalysis=false
+sonar.javascript.globals=window,document,console,require,module,exports,process,global,Buffer,__dirname,__filename,setTimeout,setInterval,clearTimeout,clearInterval
 
 # Configurações de timeout mais agressivas
 sonar.ce.gracefulStopTimeoutMs=30000
-sonar.search.httpPort=0
 
 # Configurações para economizar recursos
 sonar.forceAuthentication=false
 sonar.notifications.delay=60
+
+# Configurações específicas para Express.js/Node.js
+sonar.javascript.environments=node
