--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,11 @@ jobs:
             done
           EOF
 
-      
+      - name: Copiar projeto para o servidor
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} "rm -rf ~/projeto-tarefas"
+          scp -r . ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:~/projeto-tarefas
+  
 
 
       - name: Executar análise SonarQube (sem sudo)
@@ -87,7 +91,8 @@ jobs:
           fi
 
            # Ir para o diretório do projeto (assumindo que você já enviou o código)
-          cd \$HOME/seu-projeto
+           cd \$HOME/projeto-tarefas
+
 
           # Verifica se o sonar-project.properties existe
           if [ ! -f sonar-project.properties ]; then
