--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,72 +1,45 @@
-# Configuração SonarQube Otimizada para Baixa Memória
-# =====================================================
-
-# Identificação do projeto 
+# Identificação do projeto
 sonar.projectKey=gerenciador-tarefas-backend
 sonar.projectName=Gerenciador de Tarefas - Backend
 sonar.projectVersion=1.0.0
 
-# Configurações de autenticação (ajuste conforme necessário)
-sonar.host.url=http://201.23.3.86:9000
-sonar.login=admin
-sonar.password=admin
+# Autenticação (será inserida dinamicamente com o token)
+# sonar.login=SERÁ INSERIDO VIA SCRIPT
 
-# Configurações de fonte
-sonar.sources=.
+# Configuração de fontes
+sonar.sources=back-end
 sonar.sourceEncoding=UTF-8
 
-# EXCLUSÕES AGRESSIVAS para reduzir carga de processamento
+# Exclusões agressivas
 sonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/*.txt,**/.git/**,**/dist/**,**/build/**,**/coverage/**,**/*.min.js,**/vendor/**,**/*.bundle.js,**/test/**,**/tests/**,**/*.test.js,**/*.spec.js,**/mock/**,**/mocks/**,**/package*.json,**/.*
 
-# Incluir APENAS arquivos essenciais (Node.js backend)
-sonar.inclusions=**/*.js
+# Inclusões (só os JS do back-end)
+sonar.inclusions=back-end/**/*.js
 
-# Configurações de performance
+# Performance
 sonar.qualitygate.wait=false
 sonar.ws.timeout=120
 sonar.verbose=false
 sonar.log.level=WARN
 
-# SCM otimizado
+# SCM
 sonar.scm.provider=git
 sonar.scm.forceReloadAll=false
 
-# DESABILITAR análises pesadas
-sonar.cpd.exclusions=**/*.min.js,**/vendor/**,**/node_modules/**
-sonar.coverage.exclusions=**/*.test.js,**/*.spec.js,**/test/**,**/tests/**
-
-# Configurações específicas JavaScript (reduzidas)
+# Outras configurações JavaScript
 sonar.javascript.lcov.reportPaths=**/coverage/lcov.info
 sonar.javascript.exclusions=**/node_modules/**,**/vendor/**,**/*.min.js,**/*.bundle.js
 
-# IGNORAR regras que consomem muita memória
-sonar.issue.ignore.multicriteria=e1,e2,e3,e4,e5,e6,e7,e8
+# Ignorar regras pesadas
+sonar.issue.ignore.multicriteria=e1,e2,e3,e4
 sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S1481
 sonar.issue.ignore.multicriteria.e1.resourceKey=**/*.js
-sonar.issue.ignore.multicriteria.e2.ruleKey=javascript:S125  
+sonar.issue.ignore.multicriteria.e2.ruleKey=javascript:S125
 sonar.issue.ignore.multicriteria.e2.resourceKey=**/*.js
 sonar.issue.ignore.multicriteria.e3.ruleKey=javascript:S3776
 sonar.issue.ignore.multicriteria.e3.resourceKey=**/*.js
 sonar.issue.ignore.multicriteria.e4.ruleKey=javascript:S1192
 sonar.issue.ignore.multicriteria.e4.resourceKey=**/*.js
-sonar.issue.ignore.multicriteria.e5.ruleKey=javascript:S1854
-sonar.issue.ignore.multicriteria.e5.resourceKey=**/*.js
-sonar.issue.ignore.multicriteria.e6.ruleKey=javascript:S6544
-sonar.issue.ignore.multicriteria.e6.resourceKey=**/*.js
-sonar.issue.ignore.multicriteria.e7.ruleKey=javascript:S6557
-sonar.issue.ignore.multicriteria.e7.resourceKey=**/*.js
-sonar.issue.ignore.multicriteria.e8.ruleKey=javascript:S1116
-sonar.issue.ignore.multicriteria.e8.resourceKey=**/*.js
 
-# Configurações para reduzir falsos positivos (economia de processamento)
-sonar.javascript.globals=window,document,console,require,module,exports,process,global,Buffer,__dirname,__filename,setTimeout,setInterval,clearTimeout,clearInterval
-
-# Configurações de timeout mais agressivas
-sonar.ce.gracefulStopTimeoutMs=30000
-
-# Configurações para economizar recursos
-sonar.forceAuthentication=false
-sonar.notifications.delay=60
-
-# Configurações específicas para Express.js/Node.js
+# Environments para Node.js
 sonar.javascript.environments=node
