--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,26 +73,15 @@ jobs:
       
 
 
-      - name: Executar análise SonarQube (sem sudo)
+      - name: Executar análise SonarQube
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-           # Caminho onde o scanner será instalado
-            mkdir -p \$HOME/sonar
-            cd \$HOME/sonar
-
-            # Baixar e extrair scanner localmente
-            wget -q -O sonar-scanner.tar.gz https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.tar.gz
-            tar -xzf sonar-scanner.tar.gz
-
-            # Clonar o projeto, se necessário (ou use rsync, ou monte volume antes)
-            rm -rf gerenciador-tarefas
-            git clone https://github.com/SEU_USUARIO/gerenciador-tarefas.git
-            cd gerenciador-tarefas
-
-            # Executar análise (desde que o sonar-project.properties esteja aqui)
-          \$HOME/sonar/sonar-scanner-4.8.0.2856-linux/bin/sonar-scanner
-           EOF
-
+           mkdir -p $HOME/sonar && cd $HOME/sonar
+            wget --header="User-Agent: Mozilla/5.0" -O sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+            sudo apt-get update && sudo apt-get install unzip -y
+           unzip sonar-scanner.zip
+          ./sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -Dsonar.projectKey=SEU_PROJETO -Dsonar.sources=. -Dsonar.host.url=http://localhost:9000 -Dsonar.login=SEU_TOKEN
+          EOF
 
       - name: Limpar SonarQube
         if: always()
