--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,24 +76,25 @@ jobs:
       - name: Executar análise SonarQube
         run: |
          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-         
-         
+         mkdir -p \$HOME/sonar && cd \$HOME/sonar
 
-         curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
-         unzip -o sonar-scanner.zip
+         # Baixar scanner (sem sudo, sem unzip)
+         wget -O sonar-scanner.tar.gz https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.tar.gz
+         tar -xzf sonar-scanner.tar.gz
 
-         cd sonar-scanner-5.0.1.3006-linux
+         cd sonar-scanner-4.8.0.2856-linux
 
          ./bin/sonar-scanner \
-          -Dsonar.projectKey=gerenciador-tarefas \
-          -Dsonar.projectName="Gerenciador de Tarefas" \
-          -Dsonar.sources=. \
-          -Dsonar.host.url=http://localhost:9000 \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-          -Dsonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/dist/**,**/build/** \
-          -Dsonar.qualitygate.wait=true \
-          -Dsonar.qualitygate.timeout=300
+         -Dsonar.projectKey=gerenciador-tarefas \
+         -Dsonar.projectName="Gerenciador de Tarefas" \
+         -Dsonar.sources=. \
+         -Dsonar.host.url=http://localhost:9000 \
+         -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+         -Dsonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/dist/**,**/build/** \
+         -Dsonar.qualitygate.wait=true \
+         -Dsonar.qualitygate.timeout=300
          EOF
+
 
 
       - name: Limpar SonarQube
