--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,13 +76,13 @@ jobs:
       - name: Executar análise SonarQube
         run: |
          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-         mkdir -p \$HOME/sonar && cd \$HOME/sonar
+        
 
-         # Baixar scanner com cabeçalho para evitar erro 403
-         wget --header="User-Agent: Mozilla/5.0" -O sonar-scanner.tar.gz https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.8.0.2856-linux.tar.gz
-
-         tar -xzf sonar-scanner.tar.gz
-         cd sonar-scanner-4.8.0.2856-linux
+         curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+         unzip sonar-scanner.zip -d sonar-scanner
+         
+         
+         cd sonar-scanner-5.0.1.3006-linux
 
          ./bin/sonar-scanner \
           -Dsonar.projectKey=gerenciador-tarefas \
