teste token sonar via API

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,63 +39,79 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Iniciar SonarQube e executar análise
+      - name: Subir SonarQube temporário no servidor remoto (com checagem)
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-            # Configurar sistema
-            sudo sysctl -w vm.max_map_count=262144
-            sudo sysctl -w fs.file-max=65536
-            
-            # Iniciar SonarQube
-            docker run -d --name sonarqube-temp \
-              -p 9000:9000 \
-              -e SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true \
-              --memory=3g \
-              --ulimit nofile=65536:65536 \
-              sonarqube:9.9-community
-            
-            # Aguardar inicialização
-            echo "Aguardando SonarQube inicializar..."
-            for i in {1..60}; do
-              if curl -s http://localhost:9000/api/system/status | grep -q '"status":"UP"'; then
-                echo "✅ SonarQube iniciado com sucesso!"
-                break
+          ssh -o StrictHostKeyChecking=no aluno@201.23.3.86 '
+            docker stop sonartmp || true && docker rm sonartmp || true
+            docker pull sonarqube:community
+            docker run -d --name sonartmp -p 9090:9000 sonarqube:community
+            sleep 10
+            if ! docker ps | grep sonartmp; then
+              echo "--- Falha ao iniciar SonarQube ---"
+              docker logs sonartmp || true
+              exit 1
+            fi
+
+
+      - name: Download and install jq on remote server
+        run: |
+          ssh -o StrictHostKeyChecking=no aluno@201.23.3.86 '
+            wget -qO /home/aluno/jq https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 && chmod +x /home/aluno/jq
+          '
+      - name: Esperar SonarQube inicializar via API
+        env:
+          SONAR_USER: admin 
+          SONAR_PASS: admin 
+        run: |
+          ssh -o StrictHostKeyChecking=no aluno@201.23.3.86 '
+            # Este bloco inteiro será executado no servidor remoto (201.23.3.86)
+
+            # Define o caminho absoluto para o jq
+            JQ_PATH="/home/aluno/jq"
+
+            echo "Aguardando SonarQube atingir status '"UP"'..."
+            for i in {1..50}; do
+              # Usa sintaxe correta para curl -u e caminho absoluto para jq
+              STATUS=$(curl -s -u "$SONAR_USER:$SONAR_PASS" "http://localhost:9090/api/system/status" | "$JQ_PATH" -r .status)
+              echo "Status atual: $STATUS"
+              if [ "$STATUS" = "UP" ]; then
+                echo "SonarQube online."
+                exit 0
               fi
-              if [ $i -eq 60 ]; then
-                echo "❌ Timeout aguardando SonarQube"
-                docker logs sonarqube-temp --tail 20
-                exit 1
-              fi
-              sleep 10
+              sleep 6
             done
-          EOF
-
-      
-
-
-      - name: Executar análise SonarQube
+            echo "SonarQube não subiu a tempo! Log:"
+            docker logs sonartmp
+            exit 1
+          '  
+      - name: Criar token do admin via API REST
+        id: get_sonar_token
+        env:
+          SONAR_USER: admin 
+          SONAR_PASS: admin 
         run: |
-         ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-        
+          # Define o caminho absoluto para o jq
+          JQ_PATH="/home/aluno/jq"
+          # Executa o comando via SSH usando o caminho absoluto do jq
+          SONAR_TOKEN=$(ssh -o StrictHostKeyChecking=no aluno@201.23.3.86 "curl -s -u \"$SONAR_USER:$SONAR_PASS\" -X POST 'http://localhost:8088/api/user_tokens/generate?name=ci-token' | \"$JQ_PATH\" -r .token")
+          echo "::add-mask::$SONAR_TOKEN"
+          echo "SONAR_TOKEN=$SONAR_TOKEN" >> $GITHUB_ENV
 
-         curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
-         unzip sonar-scanner.zip -d sonar-scanner
-         
-         
-         cd sonar-scanner-5.0.1.3006-linux
+      - name: Instalar SonarScanner CLI
+        run: |
+          curl -sSLo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+          unzip -o sonar-scanner.zip
 
-         ./bin/sonar-scanner \
-          -Dsonar.projectKey=gerenciador-tarefas \
-          -Dsonar.projectName="Gerenciador de Tarefas" \
-          -Dsonar.sources=. \
-          -Dsonar.host.url=http://localhost:9000 \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
-          -Dsonar.exclusions=**/node_modules/**,**/*.log,**/*.md,**/dist/**,**/build/** \
-          -Dsonar.qualitygate.wait=true \
-          -Dsonar.qualitygate.timeout=300
-         EOF
-
-
+      - name: Rodar análise SonarScanner apontando para SonarQube remoto
+        env:
+          SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
+        run: |
+          export PATH="$PWD/sonar-scanner-5.0.1.3006-linux/bin:$PATH"
+          sonar-scanner \
+            -Dsonar.projectKey=danilo_crud_flask \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=http://201.23.3.86:9090 \
+            -Dsonar.token=$SONAR_TOKEN
 
 
       - name: Limpar SonarQube
