ajuste sonar via API

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -109,9 +109,10 @@ jobs:
           export PATH="$PWD/sonar-scanner-5.0.1.3006-linux/bin:$PATH"
           sonar-scanner \
             -Dsonar.projectKey=gerenciador-tarefas \
-            -Dsonar.sources=. \
+            -Dsonar.sources=src \
             -Dsonar.host.url=http://201.23.3.86:9090 \
             -Dsonar.token=$SONAR_TOKEN
+            -x
 
 
       - name: Limpar SonarQube
