--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -107,7 +107,7 @@ jobs:
           SONAR_TOKEN: ${{ env.SONAR_TOKEN }}
         run: |
           export PATH="$PWD/sonar-scanner-5.0.1.3006-linux/bin:$PATH"
-          sonar-scanner -x \
+          sonar-scanner -X \
             -Dsonar.projectKey=gerenciador-tarefas \
             -Dsonar.sources=src \
             -Dsonar.host.url=http://201.23.3.86:9090 \
