--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -136,40 +136,76 @@ jobs:
 
       - name: Deploy da aplicação
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
-            # Parar aplicação atual
-            docker stop gerenciador-tarefas 2>/dev/null || true
-            docker rm gerenciador-tarefas 2>/dev/null || true
-            docker stop postgres-db 2>/dev/null || true
-            docker rm postgres-db 2>/dev/null || true
-            
-            # Criar rede
-            docker network create app-network 2>/dev/null || true
-            
-            # Iniciar banco
-            docker run -d --name postgres-db \
-              --network app-network \
-              -e POSTGRES_DB=tarefas_db \
-              -e POSTGRES_USER=postgres \
-              -e POSTGRES_PASSWORD=postgres123 \
-              -v postgres_data:/var/lib/postgresql/data \
-              postgres:15-alpine
-            
-            # Aguardar banco inicializar
-            sleep 15
-            
-            # Iniciar aplicação
-            docker run -d --name gerenciador-tarefas \
-              --network app-network \
-              -p 8248:3000 \
-              -e DB_HOST=postgres-db \
-              -e DB_PORT=5432 \
-              -e DB_NAME=tarefas_db \
-              -e DB_USER=postgres \
-              -e DB_PASSWORD=postgres123 \
-              -e NODE_ENV=production \
-              willmonteiro/gerenciador-tarefas:01
-          EOF
+         ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+         # Parar aplicação atual
+         docker stop gerenciador-tarefas 2>/dev/null || true
+         docker rm gerenciador-tarefas 2>/dev/null || true
+         docker stop postgres-db 2>/dev/null || true
+         docker rm postgres-db 2>/dev/null || true
+      
+         # Limpar rede antiga se existir
+         docker network rm app-network 2>/dev/null || true
+      
+         # Criar rede (mesmo nome que docker-compose cria)
+         docker network create app-network --driver bridge
+      
+         # Iniciar banco EXATAMENTE como no seu docker-compose local
+         docker run -d --name postgres-db \
+          --network app-network \
+          -p 5435:5432 \
+          -e POSTGRES_DB=tarefas_db \
+          -e POSTGRES_USER=postgres \
+          -e POSTGRES_PASSWORD=postgres123 \
+          -v postgres_data:/var/lib/postgresql/data \
+          --health-cmd="pg_isready -U postgres -d tarefas_db" \
+          --health-interval=30s \
+          --health-timeout=10s \
+          --health-retries=5 \
+          --health-start-period=60s \
+          --restart unless-stopped \
+          postgres:15-alpine
+      
+         # Aguardar banco ficar completamente saudável
+         echo "Aguardando banco de dados ficar saudável..."
+         for i in {1..60}; do
+         HEALTH_STATUS=$(docker inspect --format='{{.State.Health.Status}}' postgres-db 2>/dev/null || echo "starting")
+         echo "Tentativa $i/60: Status do banco = $HEALTH_STATUS"
+         if [ "$HEALTH_STATUS" = "healthy" ]; then
+          echo "Banco de dados está saudável!"
+          break
+         fi
+         sleep 2
+         done
+      
+         # Verificação extra - testar conexão diretamente
+         docker exec postgres-db pg_isready -U postgres -d tarefas_db
+         if [ $? -ne 0 ]; then
+         echo "ERRO: Banco não está pronto mesmo com status healthy!"
+         docker logs postgres-db
+         exit 1
+         fi
+      
+         # Aguardar mais um pouco para garantir
+         sleep 5
+      
+         
+         docker run -d --name gerenciador-tarefas \
+         --network app-network \
+         --restart unless-stopped \
+         -p 8248:3000 \
+         -e DB_HOST=postgres-db \
+         -e DB_PORT=5432 \
+         -e DB_NAME=tarefas_db \
+         -e DB_USER=postgres \
+         -e DB_PASSWORD=postgres123 \
+         -e NODE_ENV=production \
+         --health-cmd="curl -f http://localhost:3000 || exit 1" \
+         --health-interval=30s \
+         --health-timeout=10s \
+         --health-retries=3 \
+         --health-start-period=40s \
+         willmonteiro/gerenciador-tarefas:01
+         EOF
 
       - name: Verificar aplicação
         run: |
