--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -153,9 +153,11 @@ jobs:
          docker run -d --name postgres-db \
           --network app-network \
           -p 5435:5432 \
-          -e POSTGRES_DB=tarefas_db \
-          -e POSTGRES_USER=postgres \
-          -e POSTGRES_PASSWORD=postgres123 \
+          - DB_HOST=db
+          - DB_PORT=5432
+          - POSTGRES_DB=tarefas_db  
+          - DB_USER=postgres
+          - POSTGRES_USER=postgres
           -v postgres_data:/var/lib/postgresql/data \
           --health-cmd="pg_isready -U postgres -d tarefas_db" \
           --health-interval=30s \
