--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,9 @@ services:
     environment:
       - DB_HOST=db
       - DB_PORT=5432
-      - POSTGRES_DB=tarefas_db  
+      - DB_NAME=tarefas_db \ 
       - DB_USER=postgres
-      - POSTGRES_USER=postgres
+      - DB_PASSWORD=postgres123 \
     ports:
       - "5435:5432"
     volumes:
